--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
 <head><title>Todo App</title>     
 <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700" rel="stylesheet" type="text/css">
@@ -17,3 +18,4 @@
 <script type="text/javascript" src="app.js"></script>
 </body>
 </html>
+
